# paraformer-v2-enhanced

./: .gitignore  README.md  pyproject.toml  setup.py
paper/: fig1.eps  samplepaper.tex
runs/: ctc_alignment_benchmark_cpu.json  ctc_alignment_benchmark_cuda.json  ctc_alignment_benchmark_cuda_triton.json  librispeech_probe_amp_workers_reuse_check.json  librispeech_probe_amp_workers_smoke_char.json  librispeech_probe_amp_workers_smoke_spm.json  librispeech_probe_backend_cython.json  librispeech_probe_backend_python.json  librispeech_probe_backend_triton.json  librispeech_probe_better_metrics.json  librispeech_probe_better_overfit_400_b2_metrics.json  librispeech_probe_better_overfit_400_metrics.json  librispeech_probe_better_viterbi_overfit_metrics.json  librispeech_probe_compile_better_smoke.json  librispeech_probe_compile_smoke.json  librispeech_probe_grad_accum_smoke.json  librispeech_probe_metrics.json  librispeech_probe_overfit_400_metrics.json  librispeech_probe_overfit_metrics.json  librispeech_probe_spm_overfit_400_baseline.json  librispeech_probe_spm_overfit_400_better.json  librispeech_probe_spm_overfit_400_tokenizer.model  librispeech_probe_spm_overfit_400_tokenizer.vocab  librispeech_probe_spm_overfit_400_tokenizer_training.txt  librispeech_probe_spm_reuse_smoke.model  librispeech_probe_spm_reuse_smoke.vocab  librispeech_probe_spm_reuse_smoke_training.txt  librispeech_probe_spm_smoke_baseline.json  librispeech_probe_spm_smoke_better.json  librispeech_probe_viterbi_overfit_metrics.json
scripts/: benchmark_ctc_alignment.py  librispeech_probe.py  smoke_test.py
(+3 files in other folders)
