[project]
name = "paraformer-v2-reproduction"
version = "0.1.0"
description = "PyTorch reproduction scaffold for Paraformer-v2."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2",
  "torch>=2.1",
  "torchaudio>=2.1",
  "jiwer>=3",
  "sentencepiece>=0.2",
  "triton>=3",
]

[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "Cython>=3",
  "numpy>=2",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
